knmap (2.1-3) UNRELEASED; urgency=low

  * Add the Debian KDE Extras Team to Uploaders
  * Add Vcs-Svn and Vcs-Browser to control
  * Bumped standards from 3.8.0 to 3.8.2
  * Removed backslashes in control file, (Closes: #535304).

 -- Ryan Kavanagh <ryanakca@kubuntu.org>  Fri, 03 Jul 2009 18:12:59 -0400

knmap (2.1-2) unstable; urgency=low

  * New maintainer (Closes: #484542)
  * Fix short description (Kde -> KDE) (Closes: #466812)
  * Update the standards, the dependency versions and move homepage from long
    description to the Homepage field in debian/control
  * Merge in contributions from Kubuntu:
    + Merge the Kubuntu manpage (better description) and the current manpage
    + Change debian/rules to CDBS to make maintaining the package easier
    + Updated the long description to prevent confusion between the old knmap
      and the new rewrite.
  * We need to relibtoolize :
    + When we relibtoolize, we should use autoconf*2.6*; Kubuntu's 
      00_autoconf2.6.diff
    + Debian doesn't have automake 1.6 anymore (which is what admin/cvs.sh
      asks for), so we need to patch it to use 1.10.1; 01_automake1.10.1.diff
  * Patch Makefile.am to remove useless linking, this is preferable to
    --as-needed for KDE3 aps; 02_fix_ld-flags.diff
  * Use quilt to maintain all these patches.
  * Change the priority from `optional' to `extra' to conform to section 2.5
    of the Policy (we depend on nmap which has the priority of `extra').
  * Change `Apps' to `Applications' in the menu file to remove the
    `menu-item-uses-apps-section' warning; and change `Net' to
    `Network/Monitoring'.
  * Remove the Encoding tag from the desktop file;
    03_no_encoding_in_desktop.diff
  * Change ``http://bugs.kde.org'' to ``http://bugs.debian.org''  in
    src/main.cpp; 04_report_bugs.diff (Closes: #466814)
  * Drop the creation of /usr/share/bug/ & /usr/share/bug/knmap/ since
    they are empty and serve no purpose.
  * Update the standards version from 3.7.3 to 3.8.0