@@ -1,3 +1,5 @@
+## 01_automake1.10.1.diff by Ryan Kavanagh <ryanakca@kubuntu.org>
+## Description: Allow us to use automake*1.10*
 Index: knmap-2.1/admin/cvs.sh
 ===================================================================
 --- knmap-2.1.orig/admin/cvs.sh	2008-06-07 17:49:35.000000000 -0400
