@@ -1,3 +1,5 @@
+## 01_automake1.10.1.diff by Ryan Kavanagh <ryanakca@kubuntu.org>
+## Description: Submit bugs to Debian instead of KDE.
 Index: knmap-2.1/src/main.cpp
 ===================================================================
 --- knmap-2.1.orig/src/main.cpp	2008-06-07 20:26:13.000000000 -0400
