@@ -4,8 +4,9 @@ knmap (2.1-3) UNRELEASED; urgency=low
   * Add Vcs-Svn and Vcs-Browser to control
   * Bumped standards from 3.8.0 to 3.8.2
   * Removed backslashes in control file, (Closes: #535304).
+  * Added description headers to the patches. 
 
- -- Ryan Kavanagh <ryanakca@kubuntu.org>  Fri, 03 Jul 2009 18:12:59 -0400
+ -- Ryan Kavanagh <ryanakca@kubuntu.org>  Fri, 03 Jul 2009 19:24:53 -0400
 
 knmap (2.1-2) unstable; urgency=low
 
